apps/base/ingress/httproute-keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: flux-keycloak
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - keycloak.local
  rules:
    - backendRefs:
        - name: keycloak
          port: 8080
