apps/base/ingress/httproute-kite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kite
  namespace: kube-system
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - kitedashboard.local
  rules:
    - backendRefs:
        - name: kite
          port: 8080
